# ackermann

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
docs/: conf.py  index.rst
src/ackermann/: __init__.py  __main__.py  command.py  config.py  exceptions.py  kahn.py  logger.py  vars.py
src/ackermann/test/: test_config.py  test_kahn.py  test_units.py
src/ackermann/units/: __init__.py  argparse.py  base.py  command.py  config.py  logging.py  systemd.py  vars.py
