[metadata]
name = ackermann
version = 1.0.0
author = baldulin
author_email = baldulin@systemli.org
description = A project cli command and config library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baldulin/ackermann
project_urls =
    Bug Tracker = https://github.com/baldulin/ackermann
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
SYSTEMD = systemd-python
